--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"start_url": "index.html",
 	"icons": [
 		{
-			"src": "images/app-icon.png",
+			"src": "app-icon.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		}
