--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"short_name": "サンプル",
 	"name": "サンプルアプリ",
-	"display": "fullscreen",
+	"display": "standalone",
 	"start_url": "index.html",
 	"icons": [
 		{
