--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "PWA",
-	"name": "PWASアプリ",
+	"name": "PWAアプリ",
 	"display": "standalone",
 	"start_url": "index.html",
 	"icons": [
